Split code into library and executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 3.0)
 # Installed with vcpkg
 find_package(CImg CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 find_package(TBB CONFIG REQUIRED)
 
-add_subdirectory("fit")
+add_subdirectory("fit_lib")
+add_subdirectory("fit_app")
