Don't add executable target when included as subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,8 @@ find_package(fmt CONFIG REQUIRED)
 find_package(TBB CONFIG REQUIRED)
 
 add_subdirectory("fit_lib")
-add_subdirectory("fit_app")
+
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+	# Only when this file is not included as a subdirectory in another project.
+	add_subdirectory("fit_app")
+endif()
